--- a/solutions/mac/BrainCloudCpp.xcodeproj/xcshareddata/xcschemes/BrainCloudSDK-OSX.xcscheme
+++ b/solutions/mac/BrainCloudCpp.xcodeproj/xcshareddata/xcschemes/BrainCloudSDK-OSX.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D84A70271C73707C00291D06"
-               BuildableName = "libBrainCloudCpp-iOS.a"
+               BuildableName = "libBrainCloud-OSX.a"
                BlueprintName = "BrainCloudCpp-OSX"
                ReferencedContainer = "container:BrainCloudCpp.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D84A70271C73707C00291D06"
-            BuildableName = "libBrainCloudCpp-iOS.a"
+            BuildableName = "libBrainCloud-OSX.a"
             BlueprintName = "BrainCloudCpp-OSX"
             ReferencedContainer = "container:BrainCloudCpp.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D84A70271C73707C00291D06"
-            BuildableName = "libBrainCloudCpp-iOS.a"
+            BuildableName = "libBrainCloud-OSX.a"
             BlueprintName = "BrainCloudCpp-OSX"
             ReferencedContainer = "container:BrainCloudCpp.xcodeproj">
          </BuildableReference>
