--- a/solutions/mac/BrainCloudCpp.xcodeproj/xcshareddata/xcschemes/BrainCloudSDK-watchOS.xcscheme
+++ b/solutions/mac/BrainCloudCpp.xcodeproj/xcshareddata/xcschemes/BrainCloudSDK-watchOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0720"
+   LastUpgradeVersion = "0730"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D84A701A1C73706900291D06"
-               BuildableName = "libBrainCloud-tvOS.a"
-               BlueprintName = "BrainCloudCpp-tvOS"
+               BlueprintIdentifier = "DF2230371CE38B06003A7D8D"
+               BuildableName = "libBrainCloud-watchOS.a"
+               BlueprintName = "BrainCloudCpp-watchOS"
                ReferencedContainer = "container:BrainCloudCpp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -45,9 +45,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D84A701A1C73706900291D06"
-            BuildableName = "libBrainCloud-tvOS.a"
-            BlueprintName = "BrainCloudCpp-tvOS"
+            BlueprintIdentifier = "DF2230371CE38B06003A7D8D"
+            BuildableName = "libBrainCloud-watchOS.a"
+            BlueprintName = "BrainCloudCpp-watchOS"
             ReferencedContainer = "container:BrainCloudCpp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -63,9 +63,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D84A701A1C73706900291D06"
-            BuildableName = "libBrainCloud-tvOS.a"
-            BlueprintName = "BrainCloudCpp-tvOS"
+            BlueprintIdentifier = "DF2230371CE38B06003A7D8D"
+            BuildableName = "libBrainCloud-watchOS.a"
+            BlueprintName = "BrainCloudCpp-watchOS"
             ReferencedContainer = "container:BrainCloudCpp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
