--- a/solutions/windowsDesktop_vc120/brainCloud/brainCloud.vcxproj.filters
+++ b/solutions/windowsDesktop_vc120/brainCloud/brainCloud.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClInclude Include="..\..\..\lib\jsoncpp-1.0.0\json\json.h">
       <Filter>lib\jsoncpp-1.0.0\json</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\..\..\p4\projMetagame\Development\Client\Unreal\BCSubsystem\Plugins\BCClient\Source\BCClientPlugin\Public\BrainCloudGroup.h">
+      <Filter>include\braincloud</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\src\AuthenticationType.cpp">
@@ -394,6 +397,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\lib\jsoncpp-1.0.0\jsoncpp.cpp">
       <Filter>lib\jsoncpp-1.0.0</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\BrainCloudGroup.cpp">
+      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
