Completely removed curl/openssl from the apple dependency list as the work to port the file uploader is now complete. Apple targets now use native ns classes to do http posts/gets etc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,17 +34,21 @@ if ((${CMAKE_SYSTEM_NAME} MATCHES "Windows") AND NOT (${NO_CPPREST_SDK}))
 	list(APPEND OS_SPECIFIC_SRCS "src/win/MD5.cpp")
 else()
 	list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/BrainCloudComms.h")
-	list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/nix/cURLFileUploader.h")
-	list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/nix/cURLLoader.h")
 	list(APPEND OS_SPECIFIC_SRCS "src/BrainCloudComms.cpp")
-	list(APPEND OS_SPECIFIC_SRCS "src/nix/cURLFileUploader.cpp")
-	list(APPEND OS_SPECIFIC_SRCS "src/nix/cURLLoader.cpp")
+    if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+	    list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/nix/cURLFileUploader.h")
+    	list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/nix/cURLLoader.h")
+	    list(APPEND OS_SPECIFIC_SRCS "src/nix/cURLFileUploader.cpp")
+    	list(APPEND OS_SPECIFIC_SRCS "src/nix/cURLLoader.cpp")
+    endif()
 endif()
 
 # other platform specific srcs/includes
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/mac/nsFileUploader.h")
 	list(APPEND OS_SPECIFIC_INCS "include/braincloud/internal/mac/nsURLLoader.h")
 	list(APPEND OS_SPECIFIC_SRCS "src/mac/GUID.mm")
+    list(APPEND OS_SPECIFIC_SRCS "src/mac/nsFileUploader.mm")
 	list(APPEND OS_SPECIFIC_SRCS "src/mac/nsURLLoader.mm")
 
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
@@ -190,13 +194,11 @@ ${JSONCPP_FILES})
 
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-	find_library(BC_CURL_LIB curl)
-	find_library(BC_SSL_LIB ssl)
 	find_library(BC_GAMEKIT_LIB GameKit)
 	find_library(BC_COREFOUNDATION_LIB CoreFoundation)
 	find_library(BC_FOUNDATION_LIB Foundation)
 	find_library(BC_SYSCONFIG_LIB SystemConfiguration)
-	target_link_libraries(brainCloud ${BC_CURL_LIB} ${BC_SSL_LIB} ${BC_GAMEKIT_LIB} ${BC_COREFOUNDATION_LIB} ${BC_FOUNDATION_LIB} ${BC_SYSCONFIG_LIB})
+	target_link_libraries(brainCloud ${BC_GAMEKIT_LIB} ${BC_COREFOUNDATION_LIB} ${BC_FOUNDATION_LIB} ${BC_SYSCONFIG_LIB})
 	
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 	set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH}
