--- a/solutions/nuget/x64/brainCloudCppSdk-x64.symbols.nuspec
+++ b/solutions/nuget/x64/brainCloudCppSdk-x64.symbols.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>brainCloudCppSdk-x64.symbols</id>
-    <version>2.25.0</version>
+    <version>2.26.0</version>
     <authors>bitHeads inc.</authors>
     <owners>bitHeads inc.</owners>
     <licenseUrl>http://getbraincloud.com</licenseUrl>
@@ -11,9 +11,9 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Symbols for package 'brainCloudCppSdk-x64'. This package should not likely be installed. 
 (This is not the package you are looking for).</description>
-    <releaseNotes>Release of brainCloud 2.25.0</releaseNotes>
+    <releaseNotes>Release of brainCloud 2.26.0</releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <title>brainCloud C++ SDK Symbols</title>
+    <title>brainCloud C++ SDK x64 Symbols</title>
     <summary>Symbols for for package 'brainCloudCppSdk-x64'</summary>
     <tags>braincloud  native nativepackage</tags>
   </metadata>
