Update VS projects

--- a/solutions/windowsDesktop_vc120/brainCloud/brainCloud.vcxproj
+++ b/solutions/windowsDesktop_vc120/brainCloud/brainCloud.vcxproj
@@ -182,7 +182,6 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\..\..\..\p4\projMetagame\Development\Client\Unreal\BCSubsystem\Plugins\BCClient\Source\BCClientPlugin\Public\BrainCloudGroup.h" />
     <ClInclude Include="..\..\..\include\braincloud\AuthenticationType.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudAsyncMatch.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudAuthentication.h" />
@@ -197,6 +196,7 @@
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudGlobalEntity.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudGlobalStatistics.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudIdentity.h" />
+    <ClInclude Include="..\..\..\include\braincloud\BrainCloudMail.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudMatchmaking.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudOneWayMatch.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudPlaybackStream.h" />
@@ -264,6 +264,7 @@
     <ClCompile Include="..\..\..\src\BrainCloudGlobalStatistics.cpp" />
     <ClCompile Include="..\..\..\src\BrainCloudGroup.cpp" />
     <ClCompile Include="..\..\..\src\BrainCloudIdentity.cpp" />
+    <ClCompile Include="..\..\..\src\BrainCloudMail.cpp" />
     <ClCompile Include="..\..\..\src\BrainCloudMatchmaking.cpp" />
     <ClCompile Include="..\..\..\src\BrainCloudOneWayMatch.cpp" />
     <ClCompile Include="..\..\..\src\BrainCloudPlaybackStream.cpp" />
