--- a/solutions/windowsStore_vc120/brainCloud_winstore/brainCloud_winstore.vcxproj.filters
+++ b/solutions/windowsStore_vc120/brainCloud_winstore/brainCloud_winstore.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudGroup.h">
       <Filter>include\braincloud</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\braincloud\BrainCloudMail.h">
+      <Filter>include\braincloud</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\src\AuthenticationType.cpp">
@@ -387,6 +390,9 @@
       <Filter>lib\jsoncpp</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\BrainCloudGroup.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\BrainCloudMail.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
