--- a/solutions/windowsStore_vc120/brainCloud_winstore/brainCloud_winstore.vcxproj
+++ b/solutions/windowsStore_vc120/brainCloud_winstore/brainCloud_winstore.vcxproj
@@ -58,6 +58,7 @@
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudSocialLeaderboard.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudSteam.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudTime.h" />
+    <ClInclude Include="..\..\..\include\braincloud\BrainCloudTournament.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudTypes.h" />
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudWrapper.h" />
     <ClInclude Include="..\..\..\include\braincloud\FriendPlatform.h" />
@@ -127,6 +128,7 @@
     <ClCompile Include="..\..\..\src\BrainCloudSocialLeaderboard.cpp" />
     <ClCompile Include="..\..\..\src\BrainCloudSteam.cpp" />
     <ClCompile Include="..\..\..\src\BrainCloudTime.cpp" />
+    <ClCompile Include="..\..\..\src\BrainCloudTournament.cpp" />
     <ClCompile Include="..\..\..\src\BrainCloudWrapper.cpp" />
     <ClCompile Include="..\..\..\src\FriendPlatform.cpp" />
     <ClCompile Include="..\..\..\src\GUID.cpp" />
