--- a/solutions/windowsUniversal_vc140/brainCloud/brainCloud.vcxproj.filters
+++ b/solutions/windowsUniversal_vc140/brainCloud/brainCloud.vcxproj.filters
@@ -218,6 +218,9 @@
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudMail.h">
       <Filter>include\braincloud</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\braincloud\BrainCloudTournament.h">
+      <Filter>include\braincloud</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\lib\jsoncpp-1.0.0\jsoncpp.cpp">
@@ -377,6 +380,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\BrainCloudMail.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\BrainCloudTournament.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
