--- a/solutions/windowsStore_vc120/brainCloud_winstore/brainCloud_winstore.vcxproj.filters
+++ b/solutions/windowsStore_vc120/brainCloud_winstore/brainCloud_winstore.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudTournament.h">
       <Filter>include\braincloud</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\braincloud\internal\timegm.h">
+      <Filter>include\braincloud\internal</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\src\AuthenticationType.cpp">
