--- a/solutions/windowsUniversal_vc140/brainCloud/brainCloud.vcxproj.filters
+++ b/solutions/windowsUniversal_vc140/brainCloud/brainCloud.vcxproj.filters
@@ -221,6 +221,9 @@
     <ClInclude Include="..\..\..\include\braincloud\BrainCloudTournament.h">
       <Filter>include\braincloud</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\braincloud\internal\timegm.h">
+      <Filter>include\braincloud\internal</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\lib\jsoncpp-1.0.0\jsoncpp.cpp">
