--- a/solutions/windowsUniversal_vc140/brainCloud/brainCloud.vcxproj
+++ b/solutions/windowsUniversal_vc140/brainCloud/brainCloud.vcxproj
@@ -257,6 +257,7 @@
     <ClInclude Include="..\..\..\include\braincloud\internal\JsonUtil.h" />
     <ClInclude Include="..\..\..\include\braincloud\internal\md5x.h" />
     <ClInclude Include="..\..\..\include\braincloud\internal\StringUtil.h" />
+    <ClInclude Include="..\..\..\include\braincloud\internal\timegm.h" />
     <ClInclude Include="..\..\..\include\braincloud\internal\TimerCallback.h" />
     <ClInclude Include="..\..\..\include\braincloud\internal\TimeUtil.h" />
     <ClInclude Include="..\..\..\include\braincloud\internal\URLLoader.h" />
