remove poor allocation of UObject Proxy's ... Clean up memory correctly... integrate the new version of VARest... Ensure it compiles at 4.16 and works in 4.17 (aggressive garbage collection), updated the plugin types to compile at 4.17

--- a/Plugins/BCClient/BCClient.uplugin
+++ b/Plugins/BCClient/BCClient.uplugin
@@ -6,6 +6,7 @@
   "Description": "brainCloud is a ready-made back-end platform for the development of feature-rich mobile+social games. For more information, go to getbraincloud.com.",
   "Category": "Network",
   "CreatedBy": "bitHeads Inc.",
+  "EngineVersion": "4.17.0",
   "CreatedByURL": "http://getbraincloud.com",
   "DocsURL": "http://getbraincloud.com/apidocs/",
   "MarketplaceURL": "",
@@ -25,6 +26,16 @@
       "Name": "OnlineSubsystemBrainCloud",
       "Type": "Runtime",
       "LoadingPhase": "PreDefault"
+    }
+  ],
+  "Plugins": [
+    {
+      "Name": "OnlineSubsystem",
+      "Enabled": true
+    },
+    {
+      "Name": "OnlineSubsystemUtils",
+      "Enabled": true
     }
   ],
   "EnabledByDefault": false,
